# amazon-ads-cli

./: .env.example  .gitignore  README.md  pyproject.toml
config/: profiles.yaml
docs/: US-insights.md  us-3mo-insights.md
scripts/: analyze_3mo.py  analyze_reports.py  compare_periods.py  fix_overspend.py  monthly_pull.py
src/amazon_ads/: auth.py  client.py  config.py  main.py
src/amazon_ads/commands/: ad_groups_cmd.py  auth_cmd.py  bids_cmd.py  campaigns_cmd.py  keywords_cmd.py  negatives_cmd.py  onboard_cmd.py  optimize_cmd.py  product_ads_cmd.py  profiles_cmd.py  reports_cmd.py  schema_cmd.py  sync_cmd.py  targeting_cmd.py
src/amazon_ads/models/: ad_groups.py  auth.py  campaigns.py  keywords.py  product_ads.py  reports.py
src/amazon_ads/services/: ad_groups.py  campaigns.py  keyword_generation.py  keywords.py  negative_keywords.py  onboarding.py  optimization.py  product_ads.py  profiles.py  report_queue.py  reporting.py  sync.py  targeting.py
src/amazon_ads/utils/: backup.py  cache.py  (+4 more)
tests/: conftest.py  test_auth.py  test_client.py  test_cmd_auth.py  test_cmd_bids.py  test_cmd_campaigns.py  test_cmd_keywords.py  test_cmd_onboard.py  test_cmd_optimize.py  test_cmd_reports.py  test_cmd_sync.py  test_config.py  test_models.py  test_report_queue.py  test_service_campaigns.py  test_service_keyword_generation.py  test_service_keywords.py  test_service_optimization.py  test_service_reporting.py  test_service_sync.py  test_utils_backup.py  test_utils_cache.py  test_utils_chunking.py  test_utils_errors.py  test_utils_output.py  test_utils_pagination.py
