[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-ads"
version = "0.1.0"
description = "CLI tool for managing Amazon Advertising campaigns across multiple marketplaces"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
amazon-ads = "amazon_ads.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_ads"]
